# Plasticity-Agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  concepts.md  index.md  llm.md  memory.md  metrics.md  observability.md  reasoning_market.md  retrieval.md  self_healing.md  sleep_cycle.md
examples/: basic_memory.py  energy_report_demo.py  improvement_metrics_demo.py  llm_hooks_demo.py  plastic_agent_quickstart.py  reasoning_market_demo.py  reflection_loop.py  sandboxed_healing_demo.py  self_healing_demo.py  self_refine_demo.py  sleep_cycle_demo.py  vector_recall_demo.py
plasticity_agent/: __init__.py  cli.py
plasticity_agent/adapters/: __init__.py  crewai_adapter.py  generic.py  langgraph_adapter.py  openai_agents_adapter.py  pydantic_ai_adapter.py
plasticity_agent/core/: __init__.py  agent.py  config.py  events.py  runtime.py  trace.py
plasticity_agent/healing/: __init__.py  detector.py  diagnosis.py  repair.py  sandbox.py
plasticity_agent/learning/: __init__.py  curriculum.py  reward.py  skill_library.py
plasticity_agent/llm/: __init__.py  client.py
plasticity_agent/memory/: __init__.py  consolidation.py  contradiction.py  embeddings.py  forgetting.py  memory_os.py  retrieval.py  salience.py  schemas.py  store.py  vector_index.py
plasticity_agent/metrics/: __init__.py  tracker.py
plasticity_agent/observability/: __init__.py  otel.py
plasticity_agent/reasoning/: __init__.py  auction.py  confidence.py  critic.py  critics.py  debate.py  market.py
plasticity_agent/reflection/: __init__.py  lessons.py  reflector.py  self_refine.py
plasticity_agent/server/: __init__.py  api.py  dashboard.py
plasticity_agent/thermodynamics/: __init__.py  energy_report.py  entropy.py  free_energy.py
tests/: conftest.py  test_adapters.py  test_agent.py  test_cli.py  test_concurrency.py  test_consolidation.py  test_contradiction.py  test_energy_report.py  test_evaluation.py  test_healing.py  test_llm.py  test_memory_os.py  test_memory_schema.py  test_metrics.py  test_observability.py  test_reasoning_market.py  test_reflection.py  test_salience.py  test_self_refine.py  test_skill_library.py  test_vector_retrieval.py
