[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plasticity-agent"
version = "0.2.0"
description = "Neuroplastic memory, self-healing, and critical reasoning for AI agents — a local-first, framework-agnostic runtime."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kayariyan28", email = "karandey3@outlook.com" }]
maintainers = [{ name = "Kayariyan28", email = "karandey3@outlook.com" }]
keywords = [
    "agents",
    "memory",
    "llm",
    "reflection",
    "self-healing",
    "reasoning",
    "neuroplasticity",
    "agentic-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.8",
    "httpx>=0.27",
    "numpy>=1.24",
    "opentelemetry-sdk>=1.20",
]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
# Optional, heavyweight backends (install on demand — not pulled by --all-extras):
#   pip install sentence-transformers   # semantic embeddings (SentenceTransformerBackend)
#   pip install faiss-cpu               # large-scale ANN (FaissVectorIndex)

[project.urls]
Homepage = "https://github.com/Kayariyan28/Plasticity-Agent"
Documentation = "https://github.com/Kayariyan28/Plasticity-Agent#readme"
Repository = "https://github.com/Kayariyan28/Plasticity-Agent"
Issues = "https://github.com/Kayariyan28/Plasticity-Agent/issues"
Changelog = "https://github.com/Kayariyan28/Plasticity-Agent/blob/main/CHANGELOG.md"

[project.scripts]
plasticity = "plasticity_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["plasticity_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/plasticity_agent",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/mkdocs.yml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
